fixed some grammar mistakes

--- a/web-apps/Day_10.html
+++ b/web-apps/Day_10.html
@@ -106,11 +106,11 @@ Today is a review day.
 
 <p>
 <b>What was the therac-25 used for?</b> Computerized radiation therapy. Not simply x-rays or proton beams. <br>
-<b>What kind of machine was it?</b> Linear accelerator. That is the kind of machine it was. It could be used to generate various kinds of radiation for therapy.
+<b>What kin</b>celerator. That is the kind of machine it was. It could be used to generate various kinds of radiation for therapy.
 </p>
 
 <p>
-<b>What was Algol-60? </b>It was intended as an algorithmic language. However, that doesn't answer the question. What is Algol-60? (He wants us to find the answer. He doesn't want to answer it). A language for comunicating algorithms was one purpose for it but what else? The boros(?) corporation used it for a rather oddball application but it worked.
+<b>What was Algol-60? </b>It was intended as an algorithmic language. However, that doesn't answer the question. What is Algol-60? (He wants us to find the answer. He doesn't want to answer it). A language for communicating algorithms was one purpose for it but what else? The boros(?) corporation used it for a rather oddball application but it worked.<b>d of machine was it? Linear ac</b>
 </p>
 
 <p>
@@ -208,7 +208,7 @@ Today is a review day.
 </p>
 
 <p>
-<b>Advantage of using recursion of loops such as while or for? </b>Recursive functions can be easier to conceptualize (understand). <i>Sometimes could be quickly than a for-loop. </i>It's not always slower than a for loop or take up more memory. This isn't always the case. It'll be at least as fast as a for-loop.
+<b>Advantage of using recursion of loops such as while or for? </b>Recursive functions can be easier to conceptualize (understand). <i>Sometimes could be quicker than a for-loop. </i>It's not always slower than a for loop or take up more memory. This isn't always the case. It'll be at least as fast as a for-loop.
 </p>
 
 <p>
