--- a/web-apps/Day_13.html
+++ b/web-apps/Day_13.html
@@ -139,7 +139,7 @@ Remember, check what the word size is for the machine that you are using. Don't 
 </p>
 
 <p>
-Algol-60 has a second l in it! He won't give full credit if you mess up the spelling.
+<i>Algol-60 has a second l in it! He won't give full credit if you mess up the spelling.</i>
 </p>
 
 <h3>New Topic</h3>
@@ -197,7 +197,7 @@ How can we get around copying the code repeatedly? Well, there it is. Reentrant 
 </p>
 
 <p>
-Not all recursive programs reentrant, and not all reentrant programs are recursive! There's constant confusion with reentrantcy and recursion. Most generated code seen today is reentrant. Makes it easy to be recursive if you're carefull. In object oriented code, allows us to avoid copying routines.
+Not all recursive programs reentrant, and not all reentrant programs are recursive! There's constant confusion with reentrantcy and recursion. Most generated code seen today is reentrant. Makes it easy to be recursive if you're careful. In object oriented code, allows us to avoid copying routines.
 </p>
 
 <p>
