--- a/web-apps/Day_15.html
+++ b/web-apps/Day_15.html
@@ -114,7 +114,7 @@ Almost nobody mentions GE he mentions. GE Machines. GE became the industry leade
 </p>
 
 <p>
-Generals apparently didn't believe what GE was doing couldn't work (albeit it did).<br>
+Generals (as in the military) apparently didn't believe what GE was doing could work (albeit it did).<br>
 They ended up focusing on the scientific community instead. They managed to make their customers happy quite well.
 </p>
 
@@ -199,7 +199,7 @@ In any case, people said if IBM was doing it then it couldn't be wrong. the PCjr
 </p>
 
 <p>
-Now then, we have access to large comuting resources at reasonable prices, and graphic terminals. <b>Why can't we attach those graphic terminals from far away same as we attach our teletype machines? </b>Why can't attach our graphics to remote machines??? Because of a serious problem: <b>transit time. </b>Since when does the speed of light have anything to do with my computer? You may (probably not) ask? If you want interative graphics, you have to be able to get the signal from the CPU to the graphic terminal quickly enough. 
+Now then, we have access to large computing resources at reasonable prices, and graphic terminals. <b>Why can't we attach those graphic terminals from far away same as we attach our teletype machines? </b>Why can't we attach our graphics to remote machines??? Because of a serious problem: <b>transit time. </b>Since when does the speed of light have anything to do with my computer? You may (probably not) ask? If you want interative graphics, you have to be able to get the signal from the CPU to the graphic terminal quickly enough. 
 </p>
 
 <p>
@@ -219,7 +219,7 @@ To close, we have one big question: <b>how do we get graphics on our machines? A
 </p>
 
 <p>
-The rest of the details can be found on Day 16.
+The rest of the details can be found on <a href="./Day_16.html" title="Day 16" class="page">Day 16</a>.
 </p>
 
 <p>
