--- a/web-apps/Day_16.html
+++ b/web-apps/Day_16.html
@@ -99,11 +99,11 @@ Now for the second half of where we left off from the last lecture (I'm so excit
 </p>
 
 <p>
-The video can be watched <a href="https://youtu.be/5aruFog2njE" title="here" class="https">here</a>.
+The video can be seen <a href="https://youtu.be/5aruFog2njE" title="here" class="https">here</a>.
 </p>
 
 <p>
-A number of super computers were throughout the country and people wanted to access them without having to travel to the machines. By this point, we have excellent time sharing (IBM finally got on it and GE provided great leadership in doing time sharing. Very robust system. Hella good. Worked well for quite some time.) We also had inexpensive terminals. Now is the time to overcome the transit time problem. We need to communicate rapidly between the remote graphic terminal and the local super computer CPU. Quite the challenge he says.
+A number of super computers could be found throughout the country and people wanted to access them without having to travel to the machines. By this point, we have excellent time sharing (IBM finally got on it and GE provided great leadership in doing time sharing. Very robust system. Hella good. Worked well for quite some time.) We also had inexpensive terminals. Now is the time to overcome the transit time problem. We need to communicate rapidly between the remote graphic terminal and the local super computer CPU. Quite the challenge he says.
 </p>
 
 <p>
@@ -213,6 +213,11 @@ Write code to display some image. Make it so when  you click a button or somethi
 	<br />
 
 	<div class='page-footer'>
+		<b>Backlinks:</b>
+
+		<a href='./Day_15.html'>Day 15</a>
+
+		<br /><br />
 
 	</div>
 
