--- a/web-apps/Day_5.html
+++ b/web-apps/Day_5.html
@@ -185,7 +185,10 @@ The problem is which method set a to 3? In fact, which method was called? Where 
 </p>
 
 <p>
-<b>RECURSION DOESN'T HAVE TO HAVE A BASE CASE. LOOK AT THE BINARY SEARCH FOR SQUARE ROOT. THERE ISN'T ANY. THERE IS A </b><u>TERMINATING CONDITION.</u><br>
+<b>RECURSION DOESN'T HAVE TO HAVE A BASE CASE. LOOK AT THE BINARY SEARCH FOR SQUARE ROOT. THERE ISN'T ANY. THERE IS A </b><u>TERMINATING CONDITION!</u>
+</p>
+
+<p>
 Remember, the first question we ask in recursion is, "are we there yet?"  For the count-e example, the first thing we do is ask if the tail is empty. Is the tail equal to the empty list?
 </p>
 
