--- a/web-apps/Day_6.html
+++ b/web-apps/Day_6.html
@@ -165,15 +165,15 @@ As a result, we invented <b>CVS.</b> It collected all files dealing with a proje
 </p>
 
 <p>
-<b>Subversion.</b> Subversion works on directories. You could force it to work on single files such as with remote services. (btw, our homework will be based on subversion. Use the CLI). Now then, Linux Torvalds wasn't having a good time with subversion. Working remotely was difficult. All sorts of conflicts arose when trying to merge things. He tried the propriety bitkeeper but didn't like it. As such, he invented good 'ol <b>GIT.</b>
+<b>Subversion.</b> Subversion works on directories. You could force it to work on single files such as with remote services. (btw, our homework will be based on subversion. Use the CLI). Now then, Linus Torvalds wasn't having a good time with subversion. Working remotely was difficult. All sorts of conflicts arose when trying to merge things. He tried the propriety bitkeeper but didn't like it. As such, he invented good 'ol <b>GIT.</b>
 </p>
 
 <p>
-As of now, subversion and git are the two primary version control systems that we use. Note, these two aren't ran so well in the field. <b>GUI and commercial services are trash.</b> Don't use them. Do you know how often github backups? What if it had a head crash? You know about your directories but what about others? Are they important! Damn right they are! Commercial services will keep this info from you. You're gonna need to know what the individual directories of subversion are.
+As of now, subversion and git are the two primary version control systems that we use. Note, these two aren't ran so well in the field. <b>GUI and commercial services are trash.</b> Don't use them. Do you know how often github backups? What if it had a head crash? You know about your directories but what about others? Are they important? Damn right they are! Commercial services will keep this info from you. You're gonna need to know what the individual directories of subversion are.
 </p>
 
 <p>
-MySpace, for example, didn't back up it's data at all. 13 years of data now gone!
+MySpace, for example, didn't back up it's data at all. 13 years of data now gone! Think of all the friends Dane Cook just lost!
 </p>
 
 <p>
