--- a/web-apps/Day_9.html
+++ b/web-apps/Day_9.html
@@ -99,7 +99,7 @@ Created Tuesday 25 February 2020
 </p>
 
 <p>
-He's starting the class by telling us how impotant it is to learn to read manuals. Also, when we learn a new programming language it shouldn't take us more than 2 weeks to learn to right competent code. Not necessarily good or elegant but it works.
+He's starting the class by telling us how impotant it is to learn to read manuals. Also, when we learn a new programming language it shouldn't take us more than 2 weeks to learn to write competent code. Not necessarily good or elegant but it works.
 </p>
 
 <p>
