--- a/architecture/Midterm_Review.html
+++ b/architecture/Midterm_Review.html
@@ -51,7 +51,7 @@
 
 <!-- Header -->
 <div class='header'>
-	[ <a href='./Day_6.html'>Prev</a> ]
+	[ <a href='./Final_Review/MARS_Orientation.html'>Prev</a> ]
 
 	[ <span class='insen'>Index</span> ]
 
@@ -68,6 +68,12 @@
 <li><a href="./Day_4.html" title="Day 4" class="page">Day 4</a></li>
 <li><a href="./Day_5.html" title="Day 5" class="page">Day 5</a></li>
 <li><a href="./Day_6.html" title="Day 6" class="page">Day 6</a></li>
+<li><a href="./Day_7.html" title="Day 7" class="page">Day 7</a></li>
+<li><a href="./Day_8.html" title="Day 8" class="page">Day 8</a></li>
+<li><a href="./Day_9.html" title="Day 9" class="page">Day 9</a></li>
+<li><a href="./Day_10.html" title="Day 10" class="page">Day 10</a></li>
+<li><a href="./Day_11.html" title="Day 11" class="page">Day 11</a></li>
+<li><a href="./Final_Review.html" title="Final Review" class="page">Final Review</a></li>
 <li><b>Midterm Review</b>
 <ul>
 <li><a href="./Midterm_Review/Chapter_2A.html" title="Chapter 2A" class="page">Chapter 2A</a></li>
@@ -119,6 +125,15 @@ The following are all of my solutions for the previous labs along with some expl
 
 	<div class='page-footer'>
 
+			<b>Attachments:</b>
+			<table>
+
+			<tr><td><a href='./Midterm_Review/review-image.kra'>review-image.kra</a></td><td>&nbsp;</td><td>4.73Mb</td></tr>
+
+
+			<tr><td><a href='./Midterm_Review/review-image.png'>review-image.png</a></td><td>&nbsp;</td><td>1.28Mb</td></tr>
+
+			</table>
 	</div>
 
 	
